# talendstudiomcp

./: .env.example  LICENSE  README.md  pyproject.toml  talend_mcp_config.json.example
src/talend_mcp/: __init__.py  __main__.py  server.py
src/talend_mcp/config/: loader.py  schema.py
src/talend_mcp/core/: service_container.py
src/talend_mcp/core/safety/: backup.py  circuit_breaker.py  rate_limiter.py  rollback.py  validator.py
src/talend_mcp/core/search/: indexer.py  query.py
src/talend_mcp/core/security/: audit.py  confirmation.py  environment.py  vault.py
src/talend_mcp/core/talend/: commandline.py  item_types.py  properties_parser.py  tac_client.py  workspace.py  xml_parser.py
src/talend_mcp/prompts/: __init__.py  debug_failed_job.py  review_job_quality.py
src/talend_mcp/resources/: __init__.py  connection_list_res.py  error_patterns.py  job_java.py  job_last_log.py  job_source.py  job_stats.py  lineage_graph.py  project_tree.py  schema_repository.py  template_library.py  workspace_state.py
src/talend_mcp/tools/: __init__.py  _base.py
src/talend_mcp/tools/components/: component_get_schema.py  component_list.py  component_search.py  component_usage_stats.py
src/talend_mcp/tools/jobs/: job_dependencies.py  job_get.py  job_get_java.py  job_list.py  job_search.py  job_who_uses.py
src/talend_mcp/tools/metadata/: connection_get.py  connection_list.py  context_get.py  context_list.py  routine_get.py  routine_list.py  (+2 more)
tests/: conftest.py
tests/unit/: test_audit.py  test_circuit_breaker.py  test_config.py  test_workspace.py  test_xml_parser.py
(+11 files in other folders)
