[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talend-studio-mcp"
version = "0.1.0"
description = "MCP server for Talend Studio 8.x — expose ETL projects to LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "lxml>=5.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
talend-mcp = "talend_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/talend_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
